adjust spacing issues on beer page

--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,7 @@ header {
 @media all and (max-width: 600px){
     h2 {
         font-size: 2em;
+        margin-top: -60px;
     }
 }
 
@@ -179,6 +180,7 @@ header {
     text-align: center;
     padding-bottom: 20px;
     opacity: 0.8;
+    height: 20px;
 }
 
 .social-media img {
@@ -206,6 +208,7 @@ header {
 @media all and (min-width: 400px){
     .social-media{
         padding-top: 50px;
+        height: auto;
     }
 }
 
@@ -384,7 +387,7 @@ header {
 }
 
 #profile {
-    margin: 0 auto;
+    padding-top: 50px;
     text-align: center;
 }
 
@@ -400,7 +403,7 @@ header {
 
 @media all and (min-width: 1090px) {
     #beer2 {
-        width: calc(100% / 3.5 * 1.9);
+        width: calc(100% / 3.5 * 2.2);
         float: right;
         margin-top: -350px;
     }
